# flownalyzer

./: .gitignore  CLAUDE.MD  SORTFORMER_WINDOWS_SETUP.md  flow_analyzer.py  full_output.txt  pyproject.toml  transcripcion.txt  voicedb.json
.agent/rules/: python.md
.claude/: settings.local.json
flowmetrics/: __init__.py  __main__.py  analysis.py  audio.py  cli.py  config.py  output.py  patches.py  transcription.py  visualization.py  voicedb.py
